<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/text_view_lapSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/speed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentRight="true" />
        <TextView
            android:id="@+id/text_view_lapTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/text_view_lapSpeed"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lap_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/text_view_lapSpeed" />
        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_lapTime"
            android:text="@string/mm_ss_ms_lap_time" />
        <TextView
            android:id="@+id/text_view_descriptionM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_lapSpeed"
            android:layout_alignParentRight="true"
            android:text="@string/speed_m_s"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>






</androidx.cardview.widget.CardView>