<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profilePicture"
                android:id="@+id/imageViewPlayerLeaderBoard"/>
            <TextView
                android:id="@+id/text_view_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/firstName"

                android:layout_below="@+id/imageViewPlayerLeaderBoard"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
               />
            <TextView
                android:id="@+id/text_view_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginLeft="2dp"
                android:layout_below="@+id/imageViewPlayerLeaderBoard"
                android:layout_toRightOf="@+id/text_view_firstName"
                android:text="@string/lastName"

                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginStart="2dp"
                android:layout_toEndOf="@+id/text_view_firstName" />

            <TextView
                android:id="@+id/text_view_peakSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/speed"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/text_view_numberOfLaps"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/text_view_numberOfLaps"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:id="@+id/text_view_numberOfLaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentEnd="true"
                android:text="@string/number_of_laps"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_alignParentRight="true" />


</RelativeLayout>




</androidx.cardview.widget.CardView>