<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/wantToEndSession"
            android:textColor="@color/color_btn_titles"
            android:textSize="20sp"
            android:textStyle="normal|bold" />
    <TextView
        android:text="@string/theSessionWillBeSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        android:textColor="@color/color_btn_titles"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/noEndSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/no"
            android:textColor="@color/color_btn_titles"
            android:textSize="20sp"
            android:clickable="true"
            android:textStyle="normal|bold"
            android:focusable="true" />
        <TextView
            android:id="@+id/yesEndSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:text="@string/yes"
            android:textColor="@color/color_btn_titles"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            android:focusable="true" />

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>