<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.Session"
    tools:showIn="@layout/activity_session">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playerProfile"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:id="@+id/playerImageSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_visit"
            android:contentDescription="@string/profilePicture" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerNameSession"
            android:layout_marginRight="36dp"
            android:layout_marginLeft="36dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:lineSpacingExtra="6sp"
            android:text=""

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerProfile"
        android:id="@+id/stopwatch_layout"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/thick_border">


            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/border"
                    android:layout_marginStart="10dp">

                    <Chronometer
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/chronometer"
                        android:layout_marginTop="9.4dp"
                        android:textSize="20sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="6.6dp"
                        android:textColor="@color/color_btn_titles"
                        android:layout_marginStart="5dp" />
                  <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/email_name"
                        android:text="@string/timer"
                        android:textSize="14sp"
                        android:layout_marginBottom="6.6dp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/color_btn_titles"
                    android:layout_marginStart="5dp" />
                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/border"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/distance_value"
                            android:layout_marginTop="9.4dp"
                            android:textSize="20sp"
                            android:layout_marginBottom="6.6dp"

                            android:layout_marginLeft="5dp"
                            android:textColor="@color/color_btn_titles"
                            android:layout_marginStart="5dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/distance"
                            android:textSize="14sp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/color_btn_titles"
                            android:layout_marginStart="5dp" />



                    </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                >

                <Button
                    android:id="@+id/Btn_start_lap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#3AC7C1"
                    android:text="@string/start"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@color/color_btn"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/Btn_end_lap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#3AC7C1"
                    android:text="@string/lap"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@color/color_btn"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/Btn_end_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#3AC7C1"
                    android:text="@string/end"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textColor="@color/color_btn"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>



    </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stopwatch_layout"
                android:layout_marginTop="27dp"
                tools:listitem="@layout/lap_list_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linea_layout_Stats"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/thick_border"
                android:layout_below="@+id/recycler_view"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@drawable/border"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_view_lapNumber"
                            android:layout_marginTop="9.4dp"
                            android:textSize="20sp"
                            android:layout_marginBottom="6.6dp"
                            android:text="@string/_0"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/color_btn_titles"
                            android:layout_marginStart="5dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_Of_laps"
                            android:textSize="14sp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textColor="@color/color_btn_titles"
                            />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/border"
                        android:layout_marginStart="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9.4dp"
                            android:textSize="20sp"
                            android:text="@string/_0_00"
                            android:id="@+id/text_view_avgTimeLap"
                            android:layout_marginBottom="6.6dp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/color_btn_titles"
                            android:layout_marginStart="5dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/average_time_lap"
                            android:textSize="14sp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/color_btn_titles"
                            android:layout_marginStart="5dp" />



                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@drawable/border"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_view_peakSpeed"
                            android:layout_marginTop="9.4dp"
                            android:textSize="20sp"
                            android:layout_marginBottom="6.6dp"
                            android:text="@string/_0_00"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/color_btn_titles"
                            android:layout_marginStart="5dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/peak_speed_m_s"
                            android:textSize="14sp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textColor="@color/color_btn_titles"
                            />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/border"
                        android:layout_marginStart="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="9.4dp"
                            android:id="@+id/text_view_avgSpeed"
                            android:textSize="20sp"
                            android:text="@string/_0_00"
                            android:layout_marginBottom="6.6dp"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/color_btn_titles"
                            android:layout_marginStart="5dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/average_speed_m_s"
                            android:textSize="14sp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textColor="@color/color_btn_titles"
                            />



                    </LinearLayout>

                </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/border"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_view_cadence"
                            android:layout_marginTop="9.4dp"
                            android:textSize="20sp"
                            android:layout_marginBottom="6.6dp"
                            android:text="@string/_0_00"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/color_btn_titles"
                            android:layout_marginStart="5dp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cadence_laps_minute"
                            android:textSize="14sp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textColor="@color/color_btn_titles"
                            />







                </LinearLayout>


            </LinearLayout>


            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_below="@+id/linea_layout_Stats"
                android:id="@+id/graph" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>